Chamber/css/medium.css
@media only screen and (min-width:32.5rem) {

    header {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
    }

    header h1 {
        font-size: 1.5rem;
        line-height: 1.8rem;
    }

    .sclogo {
        width: 100px;
    }

    .social {
        grid-row: inherit;
        display: flex;
        align-content: center;
        width: 120px;
    }

    .social img {
        width: 35px;
    }

    nav ul li a {
        border: none;
        border-right: 1px solid rgba(0, 0, 0, 0.3);
        border-top: 1px solid rgba(0, 0, 0, 0.3);
    }

    nav ul li a {
        text-align: center;
    }

    .navBar li:first-child {
        display: none;
    }

    section:nth-last-of-type(3) {
        display: flex;
        justify-content: space-evenly;
    }

    .first {
        display: flex;
        justify-content: space-around;
        align-items: center;
    }

    main {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
        column-gap: 1em;
    }

    .hero {
        grid-column: 1/4;
        grid-row: 1/2;
    }

    .hero h2 strong {
        font-size: 1.5rem;
    }

    #joinButton {
        font-size: 1.1rem;
    }

    .hero {
        display: block;
        width: 100%;
    }

    .hero img {
        width: 100%;
    }

    .news {
        grid-column: 1/4;
        grid-row: 2/3;
    }

    .spotlights {
        grid-column: 1/4;
        grid-row: 3/4;
        display: grid;
        column-gap: 1em;
        grid-template-columns: 1fr 1fr;
    }

    .spot1 {
        grid-column: 1/2;
        grid-row: 1/2;
    }

    .spot2 {
        grid-column: 2/3;
        grid-row: 1/2;
    }

    .join {
        display: inline-block;
        grid-column: 1/4;
        grid-row: 4/5;
    }

    #join2button {
        font-size: 1.3rem;
        margin: 1em;
    }

    .event {
        grid-column: 1/3;
        grid-row: 5/6;
    }

    .event p {
        padding: 2em;
    }

    .event h2 {
        padding: 1em;
    }

    .weather {
        grid-column: 3/4;
        grid-row: 5/6;
    }

    .logo img {
        width: 80px;
    }

    footer h3 {
        color: #6EB43F;
    }

    .footer-logo {
        grid-column: 1/3;
        grid-row: 1/2;
    }

    .address {
        grid-column: 1/2;
        grid-row: 2/3;
        text-align: left;
    }

    .contact {
        grid-column: 2/3;
        grid-row: 2/3;
        text-align: left;
    }

    .project-info {
        grid-column: 1/3;
        grid-row: 3/4;
    }

    .grid-container {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-gap: 2rem;
        text-align: center;
    }

    .grid-container figure img {
        border: 2px solid #fff;
        box-shadow: 0px 6px 5px #ccc;
        border-radius: 190px;
    }

    .grid-container figure img:hover {
        box-shadow: 0 0 50px #333;
    }

    /********** business directory page ***********/
    .directory {
        display: block;
    }
    tr, tr a {
        display: table-row;
        text-align: left;
    }

    .cards {
        grid-template-columns: repeat(2, 1fr);
        grid-gap: 10px;
        padding: 25px 15px;
    }

    .card address {
        padding: 0 45px;
        margin-bottom: -15px;
    }

    .card p {
        font-size: 1.3rem;
        margin-bottom: 2rem;
    }

    .list tr {
        display: table-row;
    }

    /************** contact page *************/
    div.contact-form {
        grid-column: 1/-1;
        text-align: center;
      }
    
    .contact-form {
        background-color: #eee;
        color: #000;
        text-align: center;
        margin-top: 20px;
        display: grid;
        grid-template-columns: 1fr 1fr;
    }

    .contact-address {
        grid-column: 1/2;
      }

    .contact-map {
        grid-column: 2/3;
    }
    
    #formMainDiv {
        grid-column: 1/-1;
        grid-row: 3/4;
        margin: 0 auto;
        width: 100%;
    }

    #contact-us {
        grid-column: 1/-1;
        max-width: 450px;
        justify-self: center;
    }


}
  

